--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Realtime text chat",
   "main": "server.js",
-  "scripts": {},
+  "scripts": {
+    "server": "nodemon server.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/elszczepano/node-text-chat.git"
@@ -22,6 +24,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "pug": "^2.0.3"
   }
 }
