--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Realtime text chat",
   "main": "server.js",
   "scripts": {
+    "dev": "nodemon -w src/server.js --exec \"babel-node src/server.js\"",
     "server": "nodemon server.js"
   },
   "repository": {
@@ -17,7 +18,10 @@
   },
   "homepage": "https://github.com/elszczepano/node-text-chat#readme",
   "devDependencies": {
-    "jest": "^23.1.0"
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^23.1.0",
+    "rimraf": "^2.6.2"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
