--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "socket.io": "^2.1.1"
   }
 }
