--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "pug": "^2.0.3",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "urlencoded-parser": "^1.0.0"
   }
 }
