--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "rimraf ./dist && babel ./src -d ./dist",
     "dev": "nodemon -w src/server.js --exec \"babel-node src/server.js\"",
+    "watch": "webpack --watch --mode development --hot",
+    "prod": "webpack --mode production --progress",
     "prestart": "npm run -s build",
     "start": "nodemon dist/server.js"
   },
@@ -22,8 +24,16 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jest": "^23.1.0",
-    "rimraf": "^2.6.2"
+    "node-sass": "^4.9.0",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack-cli": "^3.0.8"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -33,6 +43,7 @@
     "express-session": "^1.15.6",
     "pug": "^2.0.3",
     "socket.io": "^2.1.1",
-    "urlencoded-parser": "^1.0.0"
+    "urlencoded-parser": "^1.0.0",
+    "webpack": "^4.14.0"
   }
 }
