--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "mongoose": "^5.2.5",
     "pug": "^2.0.3",
     "socket.io": "^2.1.1",
     "urlencoded-parser": "^1.0.0",
