--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongoose": "^5.2.5",
+    "nodemon": "^1.18.3",
     "pug": "^2.0.3",
     "socket.io": "^2.1.1",
     "urlencoded-parser": "^1.0.0",
